Remove ancient OS2_MAKEFILE
WCC_MAKEFILE could be used instead (for OS/2 target).

* Makefile.am (EXTRA_DIST): Remove OS2_MAKEFILE item.
* OS2_MAKEFILE: Remove.
* WCC_MAKEFILE: Change "OS2" to "OS/2" in the title comment.
* doc/README.OS2: Refer to WCC_MAKEFILE instead of OS2_MAKEFILE; copy
notes from OS2_MAKEFILE.

--- a/Makefile.am
+++ b/Makefile.am
@@ -182,7 +182,7 @@ CCASFLAGS += $(DEFS)
 #
 
 # other makefiles
-EXTRA_DIST += NT_MAKEFILE OS2_MAKEFILE PCR-Makefile digimars.mak \
+EXTRA_DIST += NT_MAKEFILE PCR-Makefile digimars.mak \
     Makefile.direct SMakefile.amiga WCC_MAKEFILE autogen.sh CMakeLists.txt \
     Config.cmake.in
 
