Remove ancient SMakefile.amiga
* Makefile.am (EXTRA_DIST): Remove SMakefile.amiga item.
* README.md (Installation and Portability): Do not mention Amiga has
a specific makefile.
* SMakefile.amiga: Remove.
* doc/README.amiga: Mention Makefile.direct instead of Makefile.
* doc/README.amiga (WHATS NEW): Copy Amiga-specific options and defines
from SMakefile.amiga file.

--- a/Makefile.am
+++ b/Makefile.am
@@ -183,8 +183,7 @@ CCASFLAGS += $(DEFS)
 
 # other makefiles
 EXTRA_DIST += NT_MAKEFILE PCR-Makefile digimars.mak \
-    Makefile.direct SMakefile.amiga WCC_MAKEFILE autogen.sh CMakeLists.txt \
-    Config.cmake.in
+    Makefile.direct WCC_MAKEFILE autogen.sh CMakeLists.txt Config.cmake.in
 
 # files used by makefiles other than Makefile.am
 #
