Remove ancient PCR-Makefile
* Makefile.am (EXTRA_DIST): Remove PCR-Makefile item; reorder items.
* Makefile.direct (srcdir): Update comment.
* Makefile.direct (pcr): Remove rule.
* PCR-Makefile: Remove.
* README.md (Installation and Portability): Do not mention PCR has
a specific makefile.
* doc/README.macros (PCR): Mention PCR-specific defines from
PCR-Makefile.
* tests/test.c (NTHREADS): Do not mention PCR.

--- a/Makefile.am
+++ b/Makefile.am
@@ -182,8 +182,8 @@ CCASFLAGS += $(DEFS)
 #
 
 # other makefiles
-EXTRA_DIST += NT_MAKEFILE PCR-Makefile digimars.mak \
-    Makefile.direct WCC_MAKEFILE autogen.sh CMakeLists.txt Config.cmake.in
+EXTRA_DIST += Makefile.direct NT_MAKEFILE WCC_MAKEFILE digimars.mak \
+    autogen.sh CMakeLists.txt Config.cmake.in
 
 # files used by makefiles other than Makefile.am
 #
