Compile pthread_start.c on Darwin again by CMake script (fix of commit 6ccda3052)
* CMakeLists.txt [CMAKE_USE_PTHREADS_INIT && !CYGWIN && !MSYS && APPLE]
(SRC): Add pthread_start.c item again.
* CMakeLists.txt [CMAKE_USE_PTHREADS_INIT && !CYGWIN && !MSYS] (SRC):
Specify pthread_support.c once (avoid code duplication).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -200,10 +200,13 @@ if (CMAKE_USE_PTHREADS_INIT)
   set(SRC ${SRC} gc_dlopen.c)
   if (CYGWIN OR MSYS)
     set(SRC ${SRC} win32_threads.c)
-  elseif (APPLE)
-    set(SRC ${SRC} darwin_stop_world.c pthread_support.c)
   else()
-    set(SRC ${SRC} pthread_start.c pthread_stop_world.c pthread_support.c)
+    set(SRC ${SRC} pthread_start.c pthread_support.c)
+    if (APPLE)
+      set(SRC ${SRC} darwin_stop_world.c)
+    else()
+      set(SRC ${SRC} pthread_stop_world.c)
+    endif()
   endif()
   if (HOST MATCHES .*-.*-hpux10.*)
     message(FATAL_ERROR "HP/UX 10 POSIX threads are not supported.")
