--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -38,6 +38,8 @@ environment:
   - TARGET: nmake
     ARCH: x64
     NMAKE_OPTIONS: disable_threads=1
+  - TARGET: dmc
+    CFLAGS_EXTRA: -s
   - TARGET: cygwin
     CONF_OPTIONS: --enable-cplusplus
     CFLAGS_EXTRA: -D GCTEST_PRINT_VERBOSE
@@ -86,6 +88,10 @@ build_script:
       "cd /cygdrive/c/projects/bdwgc && ./autogen.sh
        && ./configure %CONF_OPTIONS% --enable-werror && cat include/config.h
        && make -j CFLAGS_EXTRA='%CFLAGS_EXTRA%'" )
+- cmd: if [%TARGET%]==[dmc] (
+    appveyor DownloadFile "http://ftp.digitalmars.com/Digital_Mars_C++/Patch/dm857c.zip"
+    && 7z x -o.. dm857c.zip > nul && set "path=%cd%\..\dm\bin;%path%"
+    && make -f digimars.mak CFLAGS_EXTRA="%CFLAGS_EXTRA%" )
 - cmd: if [%TARGET%]==[mingw] (
     C:\MinGW\msys\1.0\bin\bash -e -l -c
       "cd /c/projects/bdwgc
@@ -113,6 +119,11 @@ test_script:
     C:\cygwin64\bin\bash -e -l -c
       "cd /cygdrive/c/projects/bdwgc
        && make -j check-without-test-driver CFLAGS_EXTRA='%CFLAGS_EXTRA%'" )
+- cmd: if [%TARGET%]==[dmc] (
+    set "path=%cd%\..\dm\bin;%path%"
+    && make -f digimars.mak %TEST_TARGET% CFLAGS_EXTRA="%CFLAGS_EXTRA%"
+    && type gctest.gc.log test_cpp.gc.log
+    && make -f digimars.mak clean )
 - cmd: if [%TARGET%]==[mingw] (
     C:\MinGW\msys\1.0\bin\bash -e -l -c
       "cd /c/projects/bdwgc
