--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -100,7 +100,7 @@ build_script:
 - cmd: if [%TARGET%]==[dmc] (
     appveyor DownloadFile "http://ftp.digitalmars.com/Digital_Mars_C++/Patch/dm857c.zip"
     && 7z x -o.. dm857c.zip > nul && set "path=%cd%\..\dm\bin;%path%"
-    && make -f digimars.mak CFLAGS_EXTRA="%CFLAGS_EXTRA%" )
+    && make -f digimars.mak CFLAGS_EXTRA="-wx %CFLAGS_EXTRA%" )
 - cmd: if [%TARGET%]==[mingw] (
     C:\MinGW\msys\1.0\bin\bash -e -l -c
       "cd /c/projects/bdwgc
@@ -130,7 +130,7 @@ test_script:
        && make -j check-without-test-driver CFLAGS_EXTRA='%CFLAGS_EXTRA%'" )
 - cmd: if [%TARGET%]==[dmc] (
     set "path=%cd%\..\dm\bin;%path%"
-    && make -f digimars.mak %TEST_TARGET% CFLAGS_EXTRA="%CFLAGS_EXTRA%"
+    && make -f digimars.mak %TEST_TARGET% CFLAGS_EXTRA="-wx %CFLAGS_EXTRA%"
     && type gctest.gc.log test_cpp.gc.log
     && make -f digimars.mak clean )
 - cmd: if [%TARGET%]==[mingw] (
